--- a/ScrewTurnWiki.Web/ScrewTurn.Wiki.Web.csproj
+++ b/ScrewTurnWiki.Web/ScrewTurn.Wiki.Web.csproj
@@ -209,6 +209,8 @@
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\CommonController.cs" />
     <Compile Include="Controllers\ConfigurationTesterController.cs" />
+    <Compile Include="Controllers\EditController.cs" />
+    <Compile Include="Controllers\EditorController.cs" />
     <Compile Include="Controllers\HistoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PageController.cs" />
@@ -270,6 +272,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Edit.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Localization\Common\Editor.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Editor.resx</DependentUpon>
     </Compile>
     <Compile Include="Localization\Common\Error.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -334,6 +341,8 @@
     <Compile Include="Models\Admin\Home\BulkEmailModel.cs" />
     <Compile Include="Models\Admin\Home\OrphanPagesModel.cs" />
     <Compile Include="Models\BaseModel.cs" />
+    <Compile Include="Models\Edit\EditModel.cs" />
+    <Compile Include="Models\Edit\KeepAliveModel.cs" />
     <Compile Include="Models\User\ProfileDisplayNameModel.cs" />
     <Compile Include="Models\User\ProfileEmailModel.cs" />
     <Compile Include="Models\User\ProfilePasswordModel.cs" />
@@ -379,7 +388,49 @@
     <Content Include="Content\bootstrap\css\bootstrap.css" />
     <Content Include="Content\bootstrap\css\bootstrap.min.css" />
     <Content Include="Content\bootstrap\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\chosen-sprite.png" />
+    <Content Include="Content\chosen.min.css" />
     <Content Include="Content\css\stw.installer.css" />
+    <Content Include="Content\Editor\Anchor.png" />
+    <Content Include="Content\Editor\Bold.png" />
+    <Content Include="Content\Editor\Box.png" />
+    <Content Include="Content\Editor\BR.png" />
+    <Content Include="Content\Editor\Code.png" />
+    <Content Include="Content\Editor\Comment.png" />
+    <Content Include="Content\Editor\Directory.png" />
+    <Content Include="Content\Editor\EditorBigger.png" />
+    <Content Include="Content\Editor\EditorSmaller.png" />
+    <Content Include="Content\Editor\Escape.png" />
+    <Content Include="Content\Editor\File.png" />
+    <Content Include="Content\Editor\Folder.png" />
+    <Content Include="Content\Editor\FolderUp.png" />
+    <Content Include="Content\Editor\H1.png" />
+    <Content Include="Content\Editor\H2.png" />
+    <Content Include="Content\Editor\H3.png" />
+    <Content Include="Content\Editor\H4.png" />
+    <Content Include="Content\Editor\HR.png" />
+    <Content Include="Content\Editor\Image.png" />
+    <Content Include="Content\Editor\Img.png" />
+    <Content Include="Content\Editor\Italic.png" />
+    <Content Include="Content\Editor\Link.png" />
+    <Content Include="Content\Editor\NoBr.png" />
+    <Content Include="Content\Editor\NoWiki.png" />
+    <Content Include="Content\Editor\OL.png" />
+    <Content Include="Content\Editor\PageLink.png" />
+    <Content Include="Content\Editor\Pre.png" />
+    <Content Include="Content\Editor\PreEsc.png" />
+    <Content Include="Content\Editor\Preview.png" />
+    <Content Include="Content\Editor\Progress.gif" />
+    <Content Include="Content\Editor\Refresh.png" />
+    <Content Include="Content\Editor\Snippet.png" />
+    <Content Include="Content\Editor\SpecialTags.png" />
+    <Content Include="Content\Editor\Striked.png" />
+    <Content Include="Content\Editor\Subscript.png" />
+    <Content Include="Content\Editor\Superscript.png" />
+    <Content Include="Content\Editor\Symbol.png" />
+    <Content Include="Content\Editor\TranspBG.png" />
+    <Content Include="Content\Editor\UL.png" />
+    <Content Include="Content\Editor\Underlined.png" />
     <Content Include="Content\Images\Blank.png" />
     <Content Include="Content\Images\Comment.png" />
     <Content Include="Content\Images\Enlarge.png" />
@@ -411,6 +462,8 @@
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\chosen.jquery.min.js" />
+    <Content Include="Scripts\Editor.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
@@ -419,6 +472,9 @@
     <Content Include="Scripts\jquery-ui.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
+    <Content Include="Scripts\jquery.validate.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\noty\jquery.noty.packaged.js" />
     <Content Include="Scripts\noty\jquery.noty.packaged.min.js" />
@@ -493,6 +549,7 @@
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\Scripts.js" />
     <Content Include="Scripts\stw\admin\jquery.easing.1.3.js" />
     <Content Include="Scripts\stw\common\common.js" />
     <Content Include="Views\Shared\EmailNotification.cshtml" />
@@ -567,11 +624,14 @@
     <Content Include="Views\InitWiki\PageChangeMessage.stw" />
     <Content Include="Views\InitWiki\DiscussionChangeMessage.stw" />
     <Content Include="Views\InitWiki\ApproveDraftMessage.stw" />
+    <Content Include="Views\Edit\EditPage.cshtml" />
+    <Content Include="Views\Shared\_KeepAlive.cshtml" />
+    <Content Include="Views\Shared\_Editor.cshtml" />
+    <Content Include="Views\Editor\IframeEditor.cshtml" />
     <None Include="Views\Wiki\Discussion.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\Edit\" />
     <Folder Include="Views\Admin\Categories\" />
     <Folder Include="Views\Admin\Config\" />
     <Folder Include="Views\Admin\Content\" />
@@ -588,7 +648,6 @@
     <Folder Include="Views\Admin\Theme\" />
     <Folder Include="Views\Admin\Users\" />
     <Folder Include="Views\Categories\" />
-    <Folder Include="Views\Edit\" />
     <Folder Include="Views\Home\" />
     <Folder Include="Views\SpecialPage\" />
   </ItemGroup>
@@ -946,6 +1005,38 @@
     <EmbeddedResource Include="Localization\Common\Edit.vi-VN.resx" />
     <EmbeddedResource Include="Localization\Common\Edit.zh-CN.resx" />
     <EmbeddedResource Include="Localization\Common\Edit.zh-TW.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.af-ZA.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.cs-CZ.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.da-DK.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.de-DE.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.es-ES.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.fa-IR.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.fr-FR.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.hi-IN.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.hu-HU.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.it-IT.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.ja-JP.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.ko-KR.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.lv-LV.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.nb-NO.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.nl-NL.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.pl-PL.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.pt-BR.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.pt-PT.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Editor.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Localization\Common\Editor.ro-RO.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.ru-RU.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.sk-SK.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.sr-Latn-CS.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.sv-SE.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.tr-TR.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.uk-UA.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.vi-VN.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.zh-cn.resx" />
+    <EmbeddedResource Include="Localization\Common\Editor.zh-tw.resx" />
     <EmbeddedResource Include="Localization\Common\Error.af-ZA.resx" />
     <EmbeddedResource Include="Localization\Common\Error.cs-CZ.resx" />
     <EmbeddedResource Include="Localization\Common\Error.da-DK.resx" />
